--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,42 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/damage_info.gd"
 }, {
+"base": &"CharacterBody2D",
+"class": &"Enemy",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/enemy.gd"
+}, {
+"base": &"EnemyState",
+"class": &"EnemyAir",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/enemy states/enemy_air.gd"
+}, {
+"base": &"EnemyState",
+"class": &"EnemyAttack",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/enemy states/enemy_attack.gd"
+}, {
+"base": &"EnemyState",
+"class": &"EnemyIdle",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/enemy states/enemy_idle.gd"
+}, {
+"base": &"EnemyState",
+"class": &"EnemyRun",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/enemy states/enemy_run.gd"
+}, {
+"base": &"State",
+"class": &"EnemyState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/enemy states/enemy_state.gd"
+}, {
 "base": &"Node",
 "class": &"EntityStats",
 "icon": "",
@@ -16,12 +52,6 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://scripts/player.gd"
-}, {
-"base": &"PlayerState",
-"class": &"PlayerAir",
-"icon": "",
-"language": &"GDScript",
-"path": "res://scripts/player states/player_air.gd"
 }, {
 "base": &"PlayerState",
 "class": &"PlayerAttack",
@@ -36,10 +66,10 @@ list=Array[Dictionary]([{
 "path": "res://scripts/player states/player_crouch.gd"
 }, {
 "base": &"PlayerState",
-"class": &"PlayerIdle",
+"class": &"PlayerHurt",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scripts/player states/player_idle.gd"
+"path": "res://scripts/player states/player_hurt.gd"
 }, {
 "base": &"PlayerState",
 "class": &"PlayerRoll",
