--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -14,13 +14,13 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/entity_stats.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/", "res://assets/Props/", "res://assets/HeroAndOpponents/1 Enemy/", "res://assets/HeroAndOpponents/1 Enemy/PNG/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/player states/player_hurt.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/player states/", "res://scripts/enemy states/", "res://scenes/", "res://assets/Props/", "res://assets/HeroAndOpponents/1 Enemy/", "res://assets/HeroAndOpponents/1 Enemy/PNG/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,14 +29,14 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://scenes/parallax_background.tscn", "res://scenes/ui.tscn", "res://scenes/test_scene.tscn", "res://scenes/player.tscn", "res://scenes/menu.tscn", "res://scenes/campfire.tscn", "res://scenes/enemy.tscn")
 current_scene="res://scenes/player.tscn"
-center_split_offset=-280
+center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/damage_info.gd", "res://scripts/enemy_behavior.gd", "res://scripts/entity_stats.gd", "res://scripts/health_bar.gd", "res://scripts/menu.gd", "res://scripts/player.gd", "res://scripts/player states/player_air.gd", "res://scripts/player states/player_attack.gd", "res://scripts/player states/player_crouch.gd", "res://scripts/player states/player_idle.gd", "res://scripts/player states/player_roll.gd", "res://scripts/player states/player_run.gd", "res://scripts/player states/player_slide.gd", "res://scripts/player states/player_state.gd", "res://scripts/state.gd", "res://scripts/state_machine.gd"]
+open_scripts=["res://scripts/damage_info.gd", "res://scripts/enemy.gd", "res://scripts/enemy states/enemy_air.gd", "res://scripts/enemy states/enemy_attack.gd", "res://scripts/enemy states/enemy_idle.gd", "res://scripts/enemy states/enemy_run.gd", "res://scripts/enemy states/enemy_state.gd", "res://scripts/entity_stats.gd", "res://scripts/health_bar.gd", "res://scripts/menu.gd", "res://scripts/player.gd", "res://scripts/player states/player_air.gd", "res://scripts/player states/player_attack.gd", "res://scripts/player states/player_crouch.gd", "res://scripts/player states/player_hurt.gd", "res://scripts/player states/player_idle.gd", "res://scripts/player states/player_roll.gd", "res://scripts/player states/player_run.gd", "res://scripts/player states/player_slide.gd", "res://scripts/player states/player_state.gd", "res://scripts/state.gd", "res://scripts/state_machine.gd"]
 open_help=["@GlobalScope", "Area2D", "CanvasItem", "CharacterBody2D", "CollisionShape2D", "Control", "Dictionary", "GPUParticles2D", "InputEvent", "Node", "Node2D", "NodePath", "Object", "SceneTree", "StringName", "Timer"]
 script_split_offset=150
 list_split_offset=0
