--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -14,12 +14,12 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/player states/player_hurt.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/ui.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/player states/", "res://scripts/enemy states/", "res://scenes/", "res://assets/Props/", "res://assets/HeroAndOpponents/1 Enemy/", "res://assets/HeroAndOpponents/1 Enemy/PNG/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/parallax_background.tscn", "res://scenes/ui.tscn", "res://scenes/test_scene.tscn", "res://scenes/player.tscn", "res://scenes/menu.tscn", "res://scenes/campfire.tscn", "res://scenes/enemy.tscn")
-current_scene="res://scenes/player.tscn"
+current_scene="res://scenes/test_scene.tscn"
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=9
 
 [ScriptEditor]
