--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_filesystem_split=36
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_split_2=0
+dock_split_2=-116
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/script-ide/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/", "res://assets/Props/", "res://assets/HeroAndOpponents/1 Enemy/", "res://assets/HeroAndOpponents/1 Enemy/PNG/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://scenes/parallax_background.tscn", "res://scenes/ui.tscn", "res://scenes/test_scene.tscn", "res://scenes/player.tscn", "res://scenes/menu.tscn", "res://scenes/campfire.tscn", "res://scenes/enemy.tscn")
 current_scene="res://scenes/test_scene.tscn"
-center_split_offset=-234
+center_split_offset=-519
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
@@ -37,10 +37,10 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scripts/damage_info.gd", "res://scripts/enemy.gd", "res://scripts/enemy states/enemy_air.gd", "res://scripts/enemy states/enemy_attack.gd", "res://scripts/enemy states/enemy_idle.gd", "res://scripts/enemy states/enemy_run.gd", "res://scripts/enemy states/enemy_state.gd", "res://scripts/entity_stats.gd", "res://scripts/health_bar.gd", "res://scripts/menu.gd", "res://scripts/player.gd", "res://scripts/player states/player_air.gd", "res://scripts/player states/player_attack.gd", "res://scripts/player states/player_crouch.gd", "res://scripts/player states/player_hurt.gd", "res://scripts/player states/player_idle.gd", "res://scripts/player states/player_roll.gd", "res://scripts/player states/player_run.gd", "res://scripts/player states/player_slide.gd", "res://scripts/player states/player_state.gd", "res://scripts/state.gd", "res://scripts/state_machine.gd"]
-open_help=["@GlobalScope", "Area2D", "CanvasItem", "CharacterBody2D", "CollisionShape2D", "Control", "Dictionary", "GPUParticles2D", "InputEvent", "Label", "Node", "Node2D", "NodePath", "Object", "SceneTree", "StringName", "Timer"]
-script_split_offset=205
+open_help=["@GlobalScope", "Area2D", "CanvasItem", "CharacterBody2D", "CollisionShape2D", "Control", "Dictionary", "GPUParticles2D", "InputEvent", "Label", "Node", "Node2D", "NodePath", "Object", "SceneTree", "StringName", "TextureProgressBar", "Timer"]
+script_split_offset=1069
 list_split_offset=0
-selected_script="res://scripts/state_machine.gd"
+selected_script="res://scripts/player.gd"
 
 [editor_log]
 
